--- a/wordpress/templates/secret.yaml
+++ b/wordpress/templates/secret.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ .Values.secret.name }}
+  name: {{ .Release.Name }}
   labels:
 {{ include "wordpress.labels" . | indent 4 }}
   selector:
